# OS_labs

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.c
lab1/include/: parent.h  utils.h
lab1/src/: child.c  parent.c  utils.c
lab1/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab2/: CMakeLists.txt  main.cpp
lab2/include/: lab2.hpp  utils.hpp
lab2/src/: lab2.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp
